# whisper-audiobook-splitter

./: README.md  main.py  pyproject.toml  skip_phrases.json
