[project]
name = "whisper-audiobook-splitter"
version = "0.1.0"
description = "Split an audiobook into chapters based on detected chapter heading using the Whisper AI model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python",
    "numpy",
    "mutagen",
    "pywhispercpp",
]
